[gd_scene load_steps=5 format=3 uid="uid://carm88pw5xfdy"]

[ext_resource type="Script" path="res://scenes/object_scenes/boost_pad.gd" id="1_n66xy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ymfeq"]

[sub_resource type="BoxMesh" id="BoxMesh_qa0bn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x4mro"]

[node name="BoostPad" type="StaticBody3D"]
script = ExtResource("1_n66xy")

[node name="MeshInstance3D" type="CSGMesh3D" parent="."]
transform = Transform3D(22.4, 0, 0, 0, 0.141, 0, 0, 0, 12, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_ymfeq")
mesh = SubResource("BoxMesh_qa0bn")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 5.75, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(22.4, 0, 0, 0, 0.4, 0, 0, 0, 12, 0, 0, 0)
shape = SubResource("BoxShape3D_x4mro")

[node name="CameraTimer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="CameraTimer" to="." method="_on_camera_timer_timeout"]
